<resources>
    <string name="app_name">DEIAK Water Network</string>
    <string name="logo_description">DEIAK logo</string>

    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="admin_code">Admin Code</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="dont_have_an_account_register">Don\'t have an account? Register</string>
    <string name="user_details">User Details</string>
    <string name="all_users">All Users</string>
    <string name="logout">Logout</string>
    <string name="kleidi">Κλειδί</string>
    <string name="krounos">Πυροσβεστικός Κρουνός</string>
    <string name="taf">Ταφ</string>
    <string name="gonia">Γωνία</string>
    <string name="kolekter">Κολεκτέρ</string>
    <string name="paroxi">Παροχή</string>
    <string name="pipes">Σωλήνες</string>
    <string-array name="node_statuses">
        <item>Status</item>
        <item>active</item>
        <item>maintenance</item>
        <item>inactive</item>
    </string-array>
    <string-array name="pipe_statuses">
        <item>normal</item>
        <item>high</item>
        <item>blocked</item>
        <item>maintenance</item>
    </string-array>

</resources>